@@ -8,6 +8,7 @@ Revision history for Mojolicious-Plugin-BootstrapHelpers
  [Documentation]
 
  [Enhancements]
+ - Improved navbar support (see examples)
 
  [Meta]
 
